// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client create and query post with comments 1`] = `
{
  "data": {
    "viewer": {
      "postList": {
        "edges": [
          {
            "node": {
              "comments": {
                "edges": [],
              },
              "commentsCount": 0,
              "text": "First post content",
              "title": "A first post",
            },
          },
          {
            "node": {
              "comments": {
                "edges": [
                  {
                    "node": {
                      "text": "A first comment",
                    },
                  },
                  {
                    "node": {
                      "text": "A second comment",
                    },
                  },
                  {
                    "node": {
                      "text": "A third comment",
                    },
                  },
                ],
              },
              "commentsCount": 3,
              "text": "Second post content",
              "title": "A second post",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`client create and query ratings with filters and ordering 1`] = `
{
  "data": {
    "viewer": {
      "ratingList": {
        "edges": [
          {
            "node": {
              "title": "one",
              "value": 5,
            },
          },
        ],
      },
    },
  },
}
`;

exports[`client create and query ratings with filters and ordering 2`] = `
{
  "data": {
    "viewer": {
      "ratingList": {
        "edges": [
          {
            "node": {
              "title": "two",
              "value": 2.5,
            },
          },
          {
            "node": {
              "title": "three",
              "value": 3.5,
            },
          },
          {
            "node": {
              "title": "one",
              "value": 5,
            },
          },
        ],
      },
    },
  },
}
`;

exports[`client create and query ratings with filters and ordering 3`] = `
{
  "data": {
    "viewer": {
      "ratingList": {
        "edges": [
          {
            "node": {
              "title": "one",
              "value": 5,
            },
          },
          {
            "node": {
              "title": "three",
              "value": 3.5,
            },
          },
          {
            "node": {
              "title": "two",
              "value": 2.5,
            },
          },
        ],
      },
    },
  },
}
`;
